--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   rxdart: ^0.27.2
   audio_service: ^0.18.1
   provider: ^6.0.1
+  carousel_slider: ^4.0.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
