--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^6.0.1
   carousel_slider: ^4.0.0
   dio: ^4.0.4
+  google_mobile_ads: ^0.13.0
 
 dev_dependencies:
   flutter_test:
