--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   carousel_slider: ^4.0.0
   dio: ^4.0.4
   google_mobile_ads: ^0.13.0
+  flutter_share: ^2.0.0
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
